--- a/dex/Cargo.toml
+++ b/dex/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serum_dex"
-version = "0.5.10"
+version = "0.6.10"
 description = "Serum DEX"
 repository = "https://github.com/project-serum/serum-dex"
 edition = "2018"
@@ -16,36 +16,36 @@ default = ["program"]
 no-entrypoint = []
 
 [dependencies]
-anchor-lang = "=0.29.0"
-solana-program = "1.10.41"
-solana-security-txt = "1.0.2"
-spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
-serde = "1.0.150"
-itertools = "0.10.5"
+anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "5767365d11ef6a12cca61f97ecf323809bf22d4a" }
+solana-program = "2.1.6"
+solana-security-txt = "1.1.1"
+spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
+serde = "1.0.216"
+itertools = "0.13.0"
 without-alloc = "0.2.2"
-num_enum = "0.5.7"
+num_enum = "0.7.3"
 static_assertions = "1.1.0"
 bincode = "1.3.3"
-enumflags2 = "0.6.4"
-field-offset = "0.3.4"
-thiserror = "1.0.37"
-safe-transmute = "0.11.2"
-arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
-num-traits = "0.2.15"
-arrayref = "0.3.6"
-bytemuck = "1.12.3"
-byteorder = "1.4.3"
+enumflags2 = "0.7.10"
+field-offset = "0.3.6"
+thiserror = "2.0.7"
+safe-transmute = "0.11.3"
+arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
+num-traits = "0.2.19"
+arrayref = "0.3.9"
+bytemuck = "1.20.0"
+byteorder = "1.5.0"
 default-env = "0.1.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
 
 [dev-dependencies]
-rand = "0.7.3"
-hexdump = "0.1.0"
-proptest = "1.0.0"
-proptest-derive = "0.3.0"
-bumpalo = { version = "3.4.0", features = ["collections"] }
+rand = "0.8.5"
+hexdump = "0.1.2"
+proptest = "1.6.0"
+proptest-derive = "0.5.1"
+bumpalo = { version = "3.16.0", features = ["collections"] }
 
 [profile.release]
 lto = "fat"
